--- a/colab_quickstart.ipynb
+++ b/colab_quickstart.ipynb
@@ -12,26 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "MrIwJ5QDz-e9"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install pytorch-transformers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "0YLoS0hWz-ch"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting utils.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile utils.py \n",
     "\n",
@@ -300,149 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "iDJUEfruz-aF"
-   },
-   "outputs": [],
-   "source": [
-    "!mkdir data\n",
-    "!wget https://s3.amazonaws.com/fast-ai-nlp/yelp_review_polarity_csv.tgz -O data/data.tgz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "aepMB1Z_2u0V"
-   },
-   "outputs": [],
-   "source": [
-    "!tar -xvzf data/data.tgz -C data/\n",
-    "!mv data/yelp_review_polarity_csv/* data/\n",
-    "!rm -r data/yelp_review_polarity_csv/\n",
-    "!rm data/data.tgz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "qYv4tGNs4Tg8"
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from tqdm import tqdm_notebook\n",
-    "\n",
-    "prefix = 'data/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "BiC1S1xq4XnN"
-   },
-   "outputs": [],
-   "source": [
-    "train_df = pd.read_csv(prefix + 'train.csv', header=None)\n",
-    "train_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "um-kSl434Xk6"
-   },
-   "outputs": [],
-   "source": [
-    "test_df = pd.read_csv(prefix + 'test.csv', header=None)\n",
-    "test_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "_Xe5tm-2441r"
-   },
-   "outputs": [],
-   "source": [
-    "train_df[0] = (train_df[0] == 2).astype(int)\n",
-    "test_df[0] = (test_df[0] == 2).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "hVsnPNzr4XjB"
-   },
-   "outputs": [],
-   "source": [
-    "train_df = pd.DataFrame({\n",
-    "    'id':range(len(train_df)),\n",
-    "    'label':train_df[0],\n",
-    "    'alpha':['a']*train_df.shape[0],\n",
-    "    'text': train_df[1].replace(r'\\n', ' ', regex=True)\n",
-    "})\n",
-    "\n",
-    "train_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "IkUFgZeh4Xf2"
-   },
-   "outputs": [],
-   "source": [
-    "dev_df = pd.DataFrame({\n",
-    "    'id':range(len(test_df)),\n",
-    "    'label':test_df[0],\n",
-    "    'alpha':['a']*test_df.shape[0],\n",
-    "    'text': test_df[1].replace(r'\\n', ' ', regex=True)\n",
-    "})\n",
-    "\n",
-    "dev_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "pFlvoH234XdO"
-   },
-   "outputs": [],
-   "source": [
-    "train_df.to_csv('data/train.tsv', sep='\\t', index=False, header=False, columns=train_df.columns)\n",
-    "dev_df.to_csv('data/dev.tsv', sep='\\t', index=False, header=False, columns=dev_df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -483,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -529,20 +382,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "atGwIw3iz7BJ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data_dir': 'data/',\n",
+       " 'model_type': 'roberta',\n",
+       " 'model_name': 'roberta-base',\n",
+       " 'task_name': 'binary',\n",
+       " 'output_dir': 'outputs/',\n",
+       " 'cache_dir': 'cache/',\n",
+       " 'do_train': True,\n",
+       " 'do_eval': True,\n",
+       " 'fp16': False,\n",
+       " 'fp16_opt_level': 'O1',\n",
+       " 'max_seq_length': 128,\n",
+       " 'output_mode': 'classification',\n",
+       " 'train_batch_size': 8,\n",
+       " 'eval_batch_size': 8,\n",
+       " 'gradient_accumulation_steps': 1,\n",
+       " 'num_train_epochs': 1,\n",
+       " 'weight_decay': 0,\n",
+       " 'learning_rate': 4e-05,\n",
+       " 'adam_epsilon': 1e-08,\n",
+       " 'warmup_steps': 0,\n",
+       " 'max_grad_norm': 1.0,\n",
+       " 'logging_steps': 50,\n",
+       " 'evaluate_during_training': False,\n",
+       " 'save_steps': 2000,\n",
+       " 'eval_all_checkpoints': True,\n",
+       " 'overwrite_output_dir': False,\n",
+       " 'reprocess_input_data': False,\n",
+       " 'notes': 'Using Yelp Reviews dataset'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "args"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -556,13 +447,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ymjmIyOhz7BN"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Output directory (outputs/) already exists and is not empty. Use --overwrite_output_dir to overcome.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-8746c855166a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'output_dir'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'output_dir'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'do_train'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'overwrite_output_dir'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Output directory ({}) already exists and is not empty. Use --overwrite_output_dir to overcome.\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'output_dir'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: Output directory (outputs/) already exists and is not empty. Use --overwrite_output_dir to overcome."
+     ]
+    }
+   ],
    "source": [
     "if os.path.exists(args['output_dir']) and os.listdir(args['output_dir']) and args['do_train'] and not args['overwrite_output_dir']:\n",
     "    raise ValueError(\"Output directory ({}) already exists and is not empty. Use --overwrite_output_dir to overcome.\".format(args['output_dir']))"
@@ -570,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -590,13 +493,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "qm5AguwFz7BR"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:pytorch_transformers.modeling_utils:loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-config.json from cache at C:\\Users\\georg\\.cache\\torch\\pytorch_transformers\\e1a2a406b5a05063c31f4dfdee7608986ba7c6393f7f79db5e69dcd197208534.a7ab0e5de2d8321d6d6a15b199110f2c99be72976b7d151423cb8d8c261a13b6\n",
+      "INFO:pytorch_transformers.modeling_utils:Model config {\n",
+      "  \"architectures\": [\n",
+      "    \"RobertaForMaskedLM\"\n",
+      "  ],\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"finetuning_task\": \"binary\",\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"layer_norm_eps\": 1e-05,\n",
+      "  \"max_position_embeddings\": 514,\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"num_labels\": 2,\n",
+      "  \"output_attentions\": false,\n",
+      "  \"output_hidden_states\": false,\n",
+      "  \"pruned_heads\": {},\n",
+      "  \"torchscript\": false,\n",
+      "  \"type_vocab_size\": 1,\n",
+      "  \"vocab_size\": 50265\n",
+      "}\n",
+      "\n",
+      "INFO:pytorch_transformers.tokenization_utils:loading file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-vocab.json from cache at C:\\Users\\georg\\.cache\\torch\\pytorch_transformers\\d0c5776499adc1ded22493fae699da0971c1ee4c2587111707a4d177d20257a2.ef00af9e673c7160b4d41cfda1f48c5f4cba57d5142754525572a846a1ab1b9b\n",
+      "INFO:pytorch_transformers.tokenization_utils:loading file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-merges.txt from cache at C:\\Users\\georg\\.cache\\torch\\pytorch_transformers\\b35e7cd126cd4229a746b5d5c29a749e8e84438b14bcdb575950584fe33207e8.70bec105b4158ed9a1747fea67a43f5dee97855c64d62b6ec3742f4cfdb5feda\n"
+     ]
+    }
+   ],
    "source": [
     "config = config_class.from_pretrained(args['model_name'], num_labels=2, finetuning_task=args['task_name'])\n",
     "tokenizer = tokenizer_class.from_pretrained(args['model_name'])"
@@ -604,20 +541,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "IGZHNvKAz7BU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:pytorch_transformers.modeling_utils:loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-config.json from cache at C:\\Users\\georg\\.cache\\torch\\pytorch_transformers\\e1a2a406b5a05063c31f4dfdee7608986ba7c6393f7f79db5e69dcd197208534.a7ab0e5de2d8321d6d6a15b199110f2c99be72976b7d151423cb8d8c261a13b6\n",
+      "INFO:pytorch_transformers.modeling_utils:Model config {\n",
+      "  \"architectures\": [\n",
+      "    \"RobertaForMaskedLM\"\n",
+      "  ],\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"finetuning_task\": null,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"layer_norm_eps\": 1e-05,\n",
+      "  \"max_position_embeddings\": 514,\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"num_labels\": 2,\n",
+      "  \"output_attentions\": false,\n",
+      "  \"output_hidden_states\": false,\n",
+      "  \"pruned_heads\": {},\n",
+      "  \"torchscript\": false,\n",
+      "  \"type_vocab_size\": 1,\n",
+      "  \"vocab_size\": 50265\n",
+      "}\n",
+      "\n",
+      "INFO:pytorch_transformers.modeling_utils:loading weights file https://s3.amazonaws.com/models.huggingface.co/bert/roberta-base-pytorch_model.bin from cache at C:\\Users\\georg\\.cache\\torch\\pytorch_transformers\\228756ed15b6d200d7cb45aaef08c087e2706f54cb912863d2efe07c89584eb7.49b88ba7ec2c26a7558dda98ca3884c3b80fa31cf43a1b1f23aef3ff81ba344e\n",
+      "INFO:pytorch_transformers.modeling_utils:Weights of RobertaForSequenceClassification not initialized from pretrained model: ['classifier.dense.weight', 'classifier.dense.bias', 'classifier.out_proj.weight', 'classifier.out_proj.bias']\n",
+      "INFO:pytorch_transformers.modeling_utils:Weights from pretrained model not used in RobertaForSequenceClassification: ['lm_head.bias', 'lm_head.dense.weight', 'lm_head.dense.bias', 'lm_head.layer_norm.weight', 'lm_head.layer_norm.bias', 'lm_head.decoder.weight']\n"
+     ]
+    }
+   ],
    "source": [
     "model = model_class.from_pretrained(args['model_name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -630,20 +602,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "bsPmRyGE8GnR"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -660,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -713,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -808,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -848,7 +831,7 @@
     "    results = {}\n",
     "    EVAL_TASK = args['task_name']\n",
     "\n",
-    "    eval_dataset = load_and_cache_examples(EVAL_TASK, tokenizer, evaluate=True)\n",
+    "    eval_dataset = load_and_cache_examples(EVAL_TASK, tokenizer, evaluate=True, undersample_scale_factor = 0.5)\n",
     "    if not os.path.exists(eval_output_dir):\n",
     "        os.makedirs(eval_output_dir)\n",
     "\n",
@@ -946,20 +929,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "tqiWWPA0z7Bo"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:Evaluate the following checkpoints: ['outputs']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['outputs/']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:Creating features from dataset file at data/\n",
+      "  0%|                                                                                         | 0/2722 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5363\n",
+      "2722\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████| 2722/2722 [00:05<00:00, 503.13it/s]\n",
+      "INFO:__main__:Saving features into cached file data/cached_dev_roberta-base_128_binary\n",
+      "INFO:__main__:***** Running evaluation  *****\n",
+      "INFO:__main__:  Num examples = 2722\n",
+      "INFO:__main__:  Batch size = 8\n",
+      "C:\\Users\\georg\\Anaconda3\\envs\\transformers\\lib\\site-packages\\ipykernel_launcher.py:49: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6470f6c365f743659b3a784677bd04af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Evaluating', max=341.0, style=ProgressStyle(description_w…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:***** Eval results  *****\n",
+      "INFO:__main__:  fn = 19\n",
+      "INFO:__main__:  fp = 19\n",
+      "INFO:__main__:  mcc = 0.9718456458957672\n",
+      "INFO:__main__:  tn = 1466\n",
+      "INFO:__main__:  tp = 1218\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "results = {}\n",
     "if args['do_eval']:\n",
     "    checkpoints = [args['output_dir']]\n",
+    "    print(checkpoints)\n",
     "    if args['eval_all_checkpoints']:\n",
     "        checkpoints = list(os.path.dirname(c) for c in sorted(glob.glob(args['output_dir'] + '/**/' + WEIGHTS_NAME, recursive=True)))\n",
     "        logging.getLogger(\"pytorch_transformers.modeling_utils\").setLevel(logging.WARN)  # Reduce logging\n",
+    "        \n",
     "    logger.info(\"Evaluate the following checkpoints: %s\", checkpoints)\n",
     "    for checkpoint in checkpoints:\n",
     "        global_step = checkpoint.split('-')[-1] if len(checkpoints) > 1 else \"\"\n",
@@ -972,13 +1034,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "AMb25x63z7Bq"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mcc_': 0.9718456458957672, 'tp_': 1218, 'tn_': 1466, 'fp_': 19, 'fn_': 19}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results"
    ]
@@ -1019,7 +1092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
