organizing for final submission

--- a/LSTM & Naive Model/Naive Model.ipynb
+++ b/LSTM & Naive Model/Naive Model.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -36,175 +36,27 @@
    },
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv('short_train.csv')\n",
-    "test_data = pd.read_csv('short_test.csv') "
+    "train_data = pd.read_csv('~/pytorch-transformers-classification/JJ/csv_Data/short_train.csv')\n",
+    "test_data = pd.read_csv('~/pytorch-transformers-classification/JJ/csv_Data/short_test.csv') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>label</th>\n",
-       "      <th>alpha</th>\n",
-       "      <th>text</th>\n",
-       "      <th>char_length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>a</td>\n",
-       "      <td>i wanna smoke a blunt w / her</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>a</td>\n",
-       "      <td>NOT THE TANK OVER A WHITE SHIRT</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>a</td>\n",
-       "      <td>Bruh ! ! She recorded her baby’s reaction to h...</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>a</td>\n",
-       "      <td>i miss softball so much best time of my life</td>\n",
-       "      <td>44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>a</td>\n",
-       "      <td>I will never forgive America for what they did...</td>\n",
-       "      <td>56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24955</th>\n",
-       "      <td>24955</td>\n",
-       "      <td>0</td>\n",
-       "      <td>a</td>\n",
-       "      <td>new : presi wouldent trump says the cdc is adv...</td>\n",
-       "      <td>123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24956</th>\n",
-       "      <td>24956</td>\n",
-       "      <td>0</td>\n",
-       "      <td>a</td>\n",
-       "      <td>ohio resi wouldent kelly conkey bi willups los...</td>\n",
-       "      <td>346</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24957</th>\n",
-       "      <td>24957</td>\n",
-       "      <td>0</td>\n",
-       "      <td>a</td>\n",
-       "      <td>presi wouldent trump says he has tested negati...</td>\n",
-       "      <td>160</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24958</th>\n",
-       "      <td>24958</td>\n",
-       "      <td>0</td>\n",
-       "      <td>a</td>\n",
-       "      <td>new : us supreme court cancels oral arguments ...</td>\n",
-       "      <td>175</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24959</th>\n",
-       "      <td>24959</td>\n",
-       "      <td>0</td>\n",
-       "      <td>a</td>\n",
-       "      <td>nyc mayor de blasio on the coronavirus outbrea...</td>\n",
-       "      <td>202</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>24960 rows × 5 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       index  label alpha                                               text  \\\n",
-       "0          0      1     a                     i wanna smoke a blunt w / her    \n",
-       "1          1      1     a                   NOT THE TANK OVER A WHITE SHIRT    \n",
-       "2          2      1     a  Bruh ! ! She recorded her baby’s reaction to h...   \n",
-       "3          3      1     a       i miss softball so much best time of my life   \n",
-       "4          4      1     a  I will never forgive America for what they did...   \n",
-       "...      ...    ...   ...                                                ...   \n",
-       "24955  24955      0     a  new : presi wouldent trump says the cdc is adv...   \n",
-       "24956  24956      0     a  ohio resi wouldent kelly conkey bi willups los...   \n",
-       "24957  24957      0     a  presi wouldent trump says he has tested negati...   \n",
-       "24958  24958      0     a  new : us supreme court cancels oral arguments ...   \n",
-       "24959  24959      0     a  nyc mayor de blasio on the coronavirus outbrea...   \n",
-       "\n",
-       "       char_length  \n",
-       "0               30  \n",
-       "1               32  \n",
-       "2               75  \n",
-       "3               44  \n",
-       "4               56  \n",
-       "...            ...  \n",
-       "24955          123  \n",
-       "24956          346  \n",
-       "24957          160  \n",
-       "24958          175  \n",
-       "24959          202  \n",
-       "\n",
-       "[24960 rows x 5 columns]"
+       "24960"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "train_data"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
